--- a/kalobeyei.html
+++ b/kalobeyei.html
@@ -31,40 +31,33 @@
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="secondary.css">
 	<link rel="stylesheet" type="text/css" href="project-pages/project-page.css">
 </head>
 <body>
 	<header>
-		<div id="name">NICHOLAS S SELBY</div>
-		<nav>
-			<input class="menu-btn" type="checkbox" id="menu-btn">
-			<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-			<ul class="menu">
-				<li><a href="index.html">HOME</a></li>
-				<li><a href="about.html">ABOUT ME</a></li>
-				<li><a href="selected-work.html">SELECTED WORK</a></li>
-				<li><a href="blog.html">BLOG</a></li>
-				<li><a href="service.html">SERVICE</a></li>
-			</ul>
-		</nav>
+		<div class="header-content">
+			<div id="name">NICHOLAS S SELBY</div>
+			<nav>
+				<input class="menu-btn" type="checkbox" id="menu-btn">
+				<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+				<ul class="menu">
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="about.html">ABOUT</a></li>
+					<li><a href="selected-work.html">PROJECTS</a></li>
+					<li><a href="blog.html">BLOG</a></li>
+					<li><a href="service.html">SERVICE</a></li>
+				</ul>
+			</nav>
+		</div>
 	</header>
 
 	<main>
-		<div class="cover section">
-			<img src="project-pages/kalobeyei-cover.jpg" alt="A drone photo of a solar-powered mini-grid">
-			<h1>Kenya's Largest Solar Mini-Grid</h1>
-		</div>
+		<h1>Kenya's Largest Solar Mini-Grid</h1>
 
-		<section id="skills-demonstrated">
-			<h2>Skills Demonstrated</h2>
-			<div class="skills">
-				<div class="skill">Hybrid Power Systems</div>
-				<div class="bullet"></div>
-				<div class="skill">Construction Project Management</div>
-				<div class="bullet"></div>
-				<div class="skill">Power Electronics</div>
-			</div>
-		</section>
+		<img class="img-full-width" src="project-pages/kalobeyei-cover.jpg" alt="A drone photo of a solar-powered mini-grid">
+
+		<h2 class="challenge"><b>Challenge:</b> Build a solar mini-grid for a refugee settlement</h2>
 
 		<div class="separator"></div>
 
@@ -83,6 +76,15 @@
 		<p>Our customers rely on us for reliable and convenient energy access, and my team and I are dedicated to meeting their needs. Renewvia employs local site agents and technicians who are ready to address any customer concerns. I am honored to continue to lead the Renewvia engineering team to provide renewable energy solutions that improve lives and build a sustainable future.</p>
 
         <img class="img-full-width" src="project-pages/kalobeyei-drone.jpg" title="PC: GIZ" alt="Drone photo of the Kalobeyei Settlement mini-grid">
+
+		<section id="skills-demonstrated">
+			<h2>Skills Demonstrated</h2>
+			<div class="skills">
+				<div class="skill">Hybrid Power Systems</div>
+				<div class="skill">Construction Project Management</div>
+				<div class="skill">Power Electronics</div>
+			</div>
+		</section>
 	</main>
 
 	<footer>
