--- a/lowtemp.html
+++ b/lowtemp.html
@@ -31,46 +31,33 @@
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="secondary.css">
 	<link rel="stylesheet" type="text/css" href="project-pages/project-page.css">
 </head>
 <body>
 	<header>
-		<div id="name">NICHOLAS S SELBY</div>
-		<nav>
-			<input class="menu-btn" type="checkbox" id="menu-btn">
-			<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-			<ul class="menu">
-				<li><a href="index.html">HOME</a></li>
-				<li><a href="about.html">ABOUT ME</a></li>
-				<li><a href="selected-work.html">SELECTED WORK</a></li>
-				<li><a href="blog.html">BLOG</a></li>
-				<li><a href="service.html">SERVICE</a></li>
-			</ul>
-		</nav>
+		<div class="header-content">
+			<div id="name">NICHOLAS S SELBY</div>
+			<nav>
+				<input class="menu-btn" type="checkbox" id="menu-btn">
+				<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+				<ul class="menu">
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="about.html">ABOUT</a></li>
+					<li><a href="selected-work.html">PROJECTS</a></li>
+					<li><a href="blog.html">BLOG</a></li>
+					<li><a href="service.html">SERVICE</a></li>
+				</ul>
+			</nav>
+		</div>
 	</header>
 
 	<main>
-		<div class="cover section">
-			<img src="project-pages/lowtemp-cover.jpg" alt="Scenes from low-temperature physics experiments">
-			<h1>Low Temperature Physics for Quantum Computing</h1>
-		</div>
+		<h1>Low Temperature Physics for Quantum Computing</h1>
 
-		<section id="skills-demonstrated">
-			<h2>Skills Demonstrated</h2>
-			<div class="skills">
-				<div class="skill">Design</div>
-				<div class="bullet"></div>
-				<div class="skill">Quantum Physics</div>
-				<div class="bullet"></div>
-				<div class="skill">Simulation</div>
-				<div class="bullet"></div>
-				<div class="skill">CAD</div>
-				<div class="bullet"></div>
-				<div class="skill">CNC Machining</div>
-				<div class="bullet"></div>
-				<div class="skill">Rapid Prototyping</div>
-			</div>
-		</section>
+		<img class="img-full-width" src="project-pages/lowtemp-cover.jpg" alt="Scenes from low-temperature physics experiments">
+
+		<h2 class="challenge"><b>Challenge:</b> Biaxially rotate a sample precisely in a cryogenic shot glass</h2>
 
 		<div class="separator"></div>
 
@@ -133,6 +120,18 @@
 		</section>
 
 		<img class="img-center" src="project-pages/lowtemp-handshake.jpg" alt="Me shaking hands with Dr. Wei Pan">
+
+		<section id="skills-demonstrated">
+			<h2>Skills Demonstrated</h2>
+			<div class="skills">
+				<div class="skill">Design</div>
+				<div class="skill">Quantum Physics</div>
+				<div class="skill">Simulation</div>
+				<div class="skill">CAD</div>
+				<div class="skill">CNC Machining</div>
+				<div class="skill">Rapid Prototyping</div>
+			</div>
+		</section>
 	</main>
 	
 	<footer>
