--- a/rfind.html
+++ b/rfind.html
@@ -31,44 +31,33 @@
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="secondary.css">
 	<link rel="stylesheet" type="text/css" href="project-pages/project-page.css">
 </head>
 <body>
 	<header>
-		<div id="name">NICHOLAS S SELBY</div>
-		<nav>
-			<input class="menu-btn" type="checkbox" id="menu-btn">
-			<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-			<ul class="menu">
-				<li><a href="index.html">HOME</a></li>
-				<li><a href="about.html">ABOUT ME</a></li>
-				<li><a href="selected-work.html">SELECTED WORK</a></li>
-				<li><a href="blog.html">BLOG</a></li>
-				<li><a href="service.html">SERVICE</a></li>
-			</ul>
-		</nav>
+		<div class="header-content">
+			<div id="name">NICHOLAS S SELBY</div>
+			<nav>
+				<input class="menu-btn" type="checkbox" id="menu-btn">
+				<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+				<ul class="menu">
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="about.html">ABOUT</a></li>
+					<li><a href="selected-work.html">PROJECTS</a></li>
+					<li><a href="blog.html">BLOG</a></li>
+					<li><a href="service.html">SERVICE</a></li>
+				</ul>
+			</nav>
+		</div>
 	</header>
 
 	<main>
-		<div class="cover section">
-			<img src="project-pages/rfind-cover.jpg" alt="Hand holding smartphone showing a schematic of a living room">
-			<h1>Wireless Sensing</h1>
-		</div>
+		<h1>Wireless Sensing</h1>
 
-		<section id="skills-demonstrated">
-			<h2>Skills Demonstrated</h2>
-			<div class="skills">
-				<div class="skill">Artificial Intelligence</div>
-				<div class="bullet"></div>
-				<div class="skill">C/C++</div>
-				<div class="bullet"></div>
-				<div class="skill">Wireless Networking</div>
-				<div class="bullet"></div>
-				<div class="skill">MATLAB</div>
-				<div class="bullet"></div>
-				<div class="skill">Signal Processing</div>
-			</div>
-		</section>
+		<img class="img-full-width" src="project-pages/rfind-cover.jpg" alt="Hand holding smartphone showing a schematic of a living room">
+
+		<h2 class="challenge"><b>Challenge:</b> Locate hidden RFID tags</h2>
 
 		<div class="separator"></div>
 
@@ -87,6 +76,17 @@
 		<p>Our key innovation is a new technique called two-frequency excitation. The technique uses one frequency to power up the battery-free sticker and uses the other frequency for pinpointing the exact location. Our technology is fully compliant with the FCC standards and the communication standard for billions of few-cent wireless stickers in today's world.</p>
 
 		<p>To learn more about the technology, <a rel="external" href="http://www.mit.edu/~fadel/papers/RFind-paper.pdf" download target="_blank">read our paper!</a></p>
+
+		<section id="skills-demonstrated">
+			<h2>Skills Demonstrated</h2>
+			<div class="skills">
+				<div class="skill">Artificial Intelligence</div>
+				<div class="skill">C/C++</div>
+				<div class="skill">Wireless Networking</div>
+				<div class="skill">MATLAB</div>
+				<div class="skill">Signal Processing</div>
+			</div>
+		</section>
 	</main>
 
 	<footer>
