--- a/teachbot.html
+++ b/teachbot.html
@@ -31,52 +31,33 @@
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="secondary.css">
 	<link rel="stylesheet" type="text/css" href="project-pages/project-page.css">
 </head>
 <body>
 	<header>
-		<div id="name">NICHOLAS S SELBY</div>
-		<nav>
-			<input class="menu-btn" type="checkbox" id="menu-btn">
-			<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-			<ul class="menu">
-				<li><a href="index.html">HOME</a></li>
-				<li><a href="about.html">ABOUT ME</a></li>
-				<li><a href="selected-work.html">SELECTED WORK</a></li>
-				<li><a href="blog.html">BLOG</a></li>
-				<li><a href="service.html">SERVICE</a></li>
-			</ul>
-		</nav>
+		<div class="header-content">
+			<div id="name">NICHOLAS S SELBY</div>
+			<nav>
+				<input class="menu-btn" type="checkbox" id="menu-btn">
+				<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+				<ul class="menu">
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="about.html">ABOUT</a></li>
+					<li><a href="selected-work.html">PROJECTS</a></li>
+					<li><a href="blog.html">BLOG</a></li>
+					<li><a href="service.html">SERVICE</a></li>
+				</ul>
+			</nav>
+		</div>
 	</header>
 
 	<main>
-		<div class="cover section">
-			<img src="project-pages/teachbot-cover.jpg" alt="A student interacting with a collaborative manufacturing robot">
-			<h1>TeachBot</h1>
-		</div>
+		<h1>TeachBot</h1>
 
-		<section id="skills-demonstrated">
-			<h2>Skills Demonstrated</h2>
-			<div class="skills">
-				<div class="skill">Robotics & Control</div>
-				<div class="bullet"></div>
-				<div class="skill">Statistics</div>
-				<div class="bullet"></div>
-				<div class="skill">Advanced Manufacturing</div>
-				<div class="bullet"></div>
-				<div class="skill">JavaScript</div>
-				<div class="bullet"></div>
-				<div class="skill">Python</div>
-				<div class="bullet"></div>
-				<div class="skill">HTML/CSS</div>
-				<div class="bullet"></div>
-				<div class="skill">Human Subject Testing</div>
-				<div class="bullet"></div>
-				<div class="skill">Curriculum Design</div>
-				<div class="bullet"></div>
-				<div class="skill">CAD</div>
-			</div>
-		</section>
+		<img class="img-full-width" src="project-pages/teachbot-cover.jpg" alt="A student interacting with a collaborative manufacturing robot">
+
+		<h2 class="challenge"><b>Challenge:</b> Replace people who replace people with robots with robots</h2>
 
 		<div class="separator"></div>
 
@@ -118,6 +99,22 @@
 			<p>TeachBot won several awards, including the National Science Foundation Innovation Corps Teams and Fusion grants, First Place at the MIT Mechanical Engineering Research Exhibition, and millions of dollars in grant money from the Advanced Robotics for Manufacturing Institute and others. A prominent Boston start-up incubator offered TeachBot $500,000 in seed funding.</p>
 			<p>We successfully deployed prototypes of the TeachBot system to small and medium-sized manufacturers and community colleges in the state of Massachusetts. Today, TeachBot is being used to train the future manufacturing workers of America.</p>
 			<p>To learn more about the project, <a rel="external" href="https://www.sciencedirect.com/science/article/pii/S2405844021016868" target="_blank">read our paper</a> and <a href="project-pages/teachbot-poster.pdf" download>download our award-winning poster</a>. All of our software is open source on <a rel="external" aria-label="GitHub repository" href="https://github.com/Darbeloff/TeachBot" target="_blank">GitHub</a>.</p>
+		</section>
+
+		<section id="skills-demonstrated">
+			<h2>Skills Demonstrated</h2>
+			<div class="skills">
+				<div class="skill">Robotics & Control</div>
+				<div class="skill">Statistics</div>
+				<div class="skill">Advanced Manufacturing</div>
+				<div class="skill">Node.JS</div>
+				<div class="skill">Express.JS</div>
+				<div class="skill">Python</div>
+				<div class="skill">HTML/CSS</div>
+				<div class="skill">Human Subject Testing</div>
+				<div class="skill">Curriculum Design</div>
+				<div class="skill">CAD</div>
+			</div>
 		</section>
 	</main>
 	
