--- a/tinynets.html
+++ b/tinynets.html
@@ -31,46 +31,33 @@
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="secondary.css">
 	<link rel="stylesheet" type="text/css" href="project-pages/project-page.css">
 </head>
 <body>
 	<header>
-		<div id="name">NICHOLAS S SELBY</div>
-		<nav>
-			<input class="menu-btn" type="checkbox" id="menu-btn">
-			<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-			<ul class="menu">
-				<li><a href="index.html">HOME</a></li>
-				<li><a href="about.html">ABOUT ME</a></li>
-				<li><a href="selected-work.html">SELECTED WORK</a></li>
-				<li><a href="blog.html">BLOG</a></li>
-				<li><a href="service.html">SERVICE</a></li>
-			</ul>
-		</nav>
+		<div class="header-content">
+			<div id="name">NICHOLAS S SELBY</div>
+			<nav>
+				<input class="menu-btn" type="checkbox" id="menu-btn">
+				<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+				<ul class="menu">
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="about.html">ABOUT</a></li>
+					<li><a href="selected-work.html">PROJECTS</a></li>
+					<li><a href="blog.html">BLOG</a></li>
+					<li><a href="service.html">SERVICE</a></li>
+				</ul>
+			</nav>
+		</div>
 	</header>
 
 	<main>
-		<div class="cover section">
-			<img src="project-pages/tinynets-cover.jpg" alt="A physical network implemented on breadboards">
-			<h1 id="tinynets-title">Lightweight Networking for Control Systems</h1>
-		</div>
+		<h1>Lightweight Networking for Control Systems</h1>
 
-		<section id="skills-demonstrated">
-			<h2>Skills Demonstrated</h2>
-			<div class="skills">
-				<div class="skill">Networking</div>
-				<div class="bullet"></div>
-				<div class="skill">Artificial Intelligence</div>
-				<div class="bullet"></div>
-				<div class="skill">PCB Design</div>
-				<div class="bullet"></div>
-				<div class="skill">HTML/CSS/JavaScript</div>
-				<div class="bullet"></div>
-				<div class="skill">Distributed Algorithms</div>
-				<div class="bullet"></div>
-				<div class="skill">C/C++</div>
-			</div>
-		</section>
+		<img class="img-full-width" src="project-pages/tinynets-cover.jpg" alt="A physical network implemented on breadboards">
+
+		<h2 class="challenge"><b>Challenge:</b> Design a lightweight, decentralized network for control systems</h2>
 
 		<div class="separator"></div>
 
@@ -117,6 +104,18 @@
 			</ul>
 
 			<p>To learn more about the project, <a href="project-pages/tinynets-report.pdf" target="_blank" download>read our paper</a>. Download our code and CAD files to try it yourself on <a rel="external" href="https://github.com/jakeread/tinynets" target="_blank">our GitHub repository</a>.</p>
+		</section>
+
+		<section id="skills-demonstrated">
+			<h2>Skills Demonstrated</h2>
+			<div class="skills">
+				<div class="skill">Networking</div>
+				<div class="skill">Artificial Intelligence</div>
+				<div class="skill">PCB Design</div>
+				<div class="skill">HTML/CSS/JS</div>
+				<div class="skill">Distributed Algorithms</div>
+				<div class="skill">C/C++</div>
+			</div>
 		</section>
 	</main>
 	
