--- a/eqr.html
+++ b/eqr.html
@@ -30,44 +30,37 @@
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="secondary.css">
 	<link rel="stylesheet" type="text/css" href="project-pages/project-page.css">
 </head>
 <body>
 	<header>
-		<div id="name">NICHOLAS S SELBY</div>
-		<nav>
-			<input class="menu-btn" type="checkbox" id="menu-btn">
-			<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-			<ul class="menu">
-				<li><a href="index.html">HOME</a></li>
-				<li><a href="about.html">ABOUT ME</a></li>
-				<li><a href="selected-work.html">SELECTED WORK</a></li>
-				<li><a href="blog.html">BLOG</a></li>
-				<li><a href="service.html">SERVICE</a></li>
-			</ul>
-		</nav>
+		<div class="header-content">
+			<div id="name">NICHOLAS S SELBY</div>
+			<nav>
+				<input class="menu-btn" type="checkbox" id="menu-btn">
+				<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+				<ul class="menu">
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="about.html">ABOUT</a></li>
+					<li><a href="selected-work.html">PROJECTS</a></li>
+					<li><a href="blog.html">BLOG</a></li>
+					<li><a href="service.html">SERVICE</a></li>
+				</ul>
+			</nav>
+		</div>
 	</header>
 
 	<main>
-		<div class="cover section">
-			<img src="project-pages/eqr-cover.jpg" alt="A gloved hand holding a wallet and a card with a QR labeled 'Emergency Medical Information SCAN ME'">
-			<h1>Emergency QR</h1>
-		</div>
+		<h1>Emergency QR</h1>
 
-		<section id="skills-demonstrated">
-			<h2>Skills Demonstrated</h2>
-			<div class="skills">
-				<div class="skill">HTML</div>
-				<div class="bullet"></div>
-				<div class="skill">CSS</div>
-				<div class="bullet"></div>
-				<div class="skill">JavaScript</div>
-			</div>
-		</section>
+		<img class="img-full-width" src="project-pages/eqr-cover.jpg" alt="A gloved hand holding a wallet and a card with a QR labeled 'Emergency Medical Information SCAN ME'">
+
+		<h2 class="challenge"><b>Challenge:</b> Encode all of your medical information into a compact QR code</h2>
 
 		<div class="separator"></div>
 
-		<p class="disclaimer">This is a summary of EmergencyQR for my personal portfolio. To learn more and make your own EQR for free, visit the <a rel="external" target="_blank" href="https://rupumped.github.io/EQR/">project homepage</a>.</p>
+		<p class="disclaimer">This is a summary of Emergency QR for my personal portfolio. To learn more and make your own EQR for free, visit the <a rel="external" target="_blank" href="https://rupumped.github.io/EQR/">project homepage</a>.</p>
 
 		<p>It's important to keep certain medical information readily available in case of emergencies. The worst-case scenario of an emergency ambulance response is that the crew knows nothing about the patient. If the patient is unresponsive, emergency responders can only try their best to treat life-threatening signs and symptoms. In an emergency, information can make the difference between life and death.</p>
 
@@ -78,6 +71,15 @@
 		<p>EQR codes are 100% secure. Unlike <a rel="external" href="https://myhealth.alberta.ca/myhealthrecords" target="_blank">other medical records services</a> and <a rel="external" href="http://www.sos-qr.com/" target="_blank">apps</a>, EQR does not store your information on any server. Instead, EQR leverages physical layer security, encoding all of the information you enter into the EQR code itself. The only way to access your medical information is to scan the EQR.</p>
 
 		<p>To learn more about the project and make yourself an EQR for free, visit the <a rel="external" href="https://rupumped.github.io/EQR/" target="_blank">project homepage</a>.</p>
+
+		<section id="skills-demonstrated">
+			<h2>Skills Demonstrated</h2>
+			<div class="skills">
+				<div class="skill">HTML</div>
+				<div class="skill">CSS</div>
+				<div class="skill">JavaScript</div>
+			</div>
+		</section>
 	</main>
 
 	<footer>
